# Python_todo_list

./: README.md  app.py  pyproject.toml
static/css/: styles.css
static/js/: scripts.js
templates/: contact.html  index.html
