[tool.poetry]
name = "python_todo_list"
version = "0.1.0"
description = "A simple Python to-do list application"
authors = ["Your Name <your-email@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
flask = "^2.1.0"
# Add other dependencies here

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
