[tool.poetry]
name = "python_todo_list"
version = "0.1.0"
description = "A simple Python to-do list application"
authors = ["AJ <ak144817@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
flask = "^2.3.3"
flask_sqlalchemy = "^3.0.0"
sqlalchemy = "^1.4.27"
flask_migrate = "^3.1.0"
# Add any other dependencies your project requires

[tool.poetry.dev-dependencies]
pytest = "^7.0.0"
black = "^22.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
