[tool.poetry]
name = "python_todo_list"
version = "0.1.0"
description = "A simple Python to-do list application"
authors = ["AJ <ak144817@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
flask = "^2.3.3"
flask_sqlalchemy = "^3.0.5"
sqlalchemy = "^1.4.52"
flask_migrate = "^3.1.0"
mysql-connector-python = "^8.0.32"  # Add this line to include MySQL connector

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
